--- a/r1cs-vitalik.ipynb
+++ b/r1cs-vitalik.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -13,25 +13,18 @@
      "languageId": "python"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35\n",
-      "35\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def Evaluate(x):\n",
-    "    return x^3 + x + 5\n",
+    "    return x ^ 3 + x + 5\n",
+    "\n",
     "\n",
     "def EvaluateFlatten(x):\n",
     "    v1 = x * x\n",
     "    v2 = v1 * x\n",
     "    out = v2 + x + 5\n",
     "    return out\n",
+    "\n",
     "\n",
     "print(Evaluate(3))\n",
     "print(EvaluateFlatten(3))"
@@ -48,60 +41,29 @@
    "outputs": [],
    "source": [
     "F41 = GF(41)\n",
-    "L = Matrix(F41, [\n",
-    "\t[0,1,0,0,0,0],\n",
-    "    [0,0,0,1,0,0],\n",
-    "    [0,1,0,0,1,0],\n",
-    "\t[5,0,0,0,0,1]]\n",
+    "L = Matrix(\n",
+    "    F41,\n",
+    "    [[0, 1, 0, 0, 0, 0], [0, 0, 0, 1, 0, 0], [0, 1, 0, 0, 1, 0], [5, 0, 0, 0, 0, 1]],\n",
     ")\n",
-    "R = Matrix(F41, [\n",
-    "\t[0, 1, 0, 0, 0, 0],\n",
-    "\t[0, 1, 0, 0, 0, 0],\n",
-    "\t[1, 0, 0, 0, 0, 0],\n",
-    "\t[1, 0, 0, 0, 0, 0]]\n",
+    "R = Matrix(\n",
+    "    F41,\n",
+    "    [[0, 1, 0, 0, 0, 0], [0, 1, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0]],\n",
     ")\n",
-    "O = Matrix(F41, [\n",
-    "\t[0, 0, 0, 1, 0, 0],\n",
-    "\t[0, 0, 0, 0, 1, 0],\n",
-    "\t[0, 0, 0, 0, 0, 1],\n",
-    "\t[0, 0, 1, 0, 0, 0]]\n",
+    "O = Matrix(\n",
+    "    F41,\n",
+    "    [[0, 0, 0, 1, 0, 0], [0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 0, 1], [0, 0, 1, 0, 0, 0]],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "python"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "poly [36, 16, 36, 35]\n",
-      "poly [8, 16, 5, 13]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [35, 30, 37, 21]\n",
-      "poly [4, 34, 24, 20]\n",
-      "poly [40, 36, 40, 7]\n",
-      "poly [3, 29, 23, 27]\n",
-      "poly [39, 12, 18, 14]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [0, 0, 0, 0]\n",
-      "poly [40, 36, 40, 7]\n",
-      "poly [4, 23, 22, 34]\n",
-      "poly [35, 30, 37, 21]\n",
-      "poly [4, 34, 24, 20]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "R41.<x> = PolynomialRing(F41)\n",
     "\n",
@@ -149,16 +111,16 @@
     }
    ],
    "source": [
-    "S = vector(F41, [1, 3, 35, 9, 27, 30]) # solution vector\n",
-    "Lx = R41(list(S*PolyM[0]))\n",
-    "Rx = R41(list(S*PolyM[1]))\n",
-    "Ox = R41(list(S*PolyM[2]))\n",
+    "S = vector(F41, [1, 3, 35, 9, 27, 30])  # solution vector\n",
+    "Lx = R41(list(S * PolyM[0]))\n",
+    "Rx = R41(list(S * PolyM[1]))\n",
+    "Ox = R41(list(S * PolyM[2]))\n",
     "\n",
     "print(\"Lx:\", Lx)\n",
     "print(\"Rx:\", Rx)\n",
     "print(\"Ox:\", Ox)\n",
     "\n",
-    "T = Lx*Rx - Ox\n",
+    "T = Lx * Rx - Ox\n",
     "\n",
     "print(\"T:\", T)"
    ]
@@ -173,9 +135,9 @@
    },
    "outputs": [],
    "source": [
-    "Z = R41((x-1)*(x-2)*(x-3)*(x-4))\n",
+    "Z = R41((x - 1) * (x - 2) * (x - 3) * (x - 4))\n",
     "H = T.quo_rem(Z)\n",
-    "assert(H[1]==0)"
+    "assert H[1] == 0"
    ]
   }
  ],
